open-webui/dns.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  annotations:
    tailscale.com/tailnet-fqdn: "idp.tahr-toad.ts.net"
  name: ts-egress-idp
spec:
  externalName: unused
  type: ExternalName
