open-webui/service.yaml
# Source: open-webui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app.kubernetes.io/name: open-webui
spec:
  selector:
    app.kubernetes.io/name: open-webui
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
